syntax = "proto3";

package clusterruntime.api.service;

import "api/common/error_reason.proto";
import "api/service/message.proto";
import "internal/biz/service.proto";

option go_package = "api/service;";

service ServiceInterface {
      rpc ApplyService(service.ApplyServiceRequest) returns (common.Msg);

      rpc GetSerice(biz.service.Service) returns (biz.service.Service);

      rpc CommitWorklfow(biz.service.Workflow) returns (common.Msg);

      rpc GetWorkflow(biz.service.Workflow) returns (biz.service.Workflow);
}