syntax = "proto3";

package clusterruntime.api.user;

import "api/user/message.proto";

option go_package = "api/user;";

service UserInterface {
      rpc GetUserEmail(user.UserEmaileReq) returns (user.UserEmaileResponse);
}